Added css and newsletter.

--- a/CNQAOS/web/resources/templates/center/center_template.html
+++ b/CNQAOS/web/resources/templates/center/center_template.html
@@ -1,95 +1,106 @@
-<div>
-    <table class="table">
-        <tr>  
-            <th>#</th>  
-            <td>Name</td>  
-            <th>Address Line 1</th>  
-            <th>Address Line 2</th>  
-            <th>City</th>  
-            <th>PIN</th>  
-            <th>Description</th>  
-            <th>Latitude</th> 
-            <th>Longitude</th>  
-            <th>          </th>  
-        </tr>
-        <tr data-ng-repeat="center in centerList">
-            <td>{{$index+1 }}</td>
-            <td>{{center.centerName}}</td>
-            <td>{{center.addressLine1}}</td>
-            <td>{{center.addressLine2}}</td>
-            <td>{{center.city}}</td>
-            <td>{{center.pin}}</td>
-            <td>{{center.description}}</td>
-            <td>{{center.latitude}}</td>
-            <td>{{center.longitude}}</td>
-            <td><p><a data-ng-click="edit(center)" href="javascript:;">Edit</a> | <a data-ng-click="delete(center)" href="javascript:;">Delete</a></p></td>
-        </tr>
-    </table>
+<div id="midd-container">
+    <div class="midd-content">
+        <div class="listingarea">
+            <table width="100%" border="0" cellpadding="0" cellspacing="1" class="table">
+                <tr>  
+                    <th align="center">#</th>  
+                    <td align="center">Name</td>  
+                    <th align="center">Address Line 1</th>  
+                    <th align="center">Address Line 2</th>  
+                    <th align="center">City</th>  
+                    <th align="center">PIN</th>  
+                    <th align="center">Description</th>  
+                    <th align="center">Latitude</th> 
+                    <th align="center">Longitude</th>  
+                    <th align="center">          </th>  
+                </tr>
+                <tr data-ng-repeat="center in centerList">
+                    <td align="center">{{$index + 1}}</td>
+                    <td align="center">{{center.centerName}}</td>
+                    <td align="center">{{center.addressLine1}}</td>
+                    <td align="center">{{center.addressLine2}}</td>
+                    <td align="center">{{center.city}}</td>
+                    <td align="center">{{center.pin}}</td>
+                    <td align="center">{{center.description}}</td>
+                    <td align="center">{{center.latitude}}</td>
+                    <td align="center">{{center.longitude}}</td>
+                    <td align="center"><a data-ng-click="edit(center)" href="javascript:;" title="Edit"><img alt="Edit" src="resources/images/edit-icon.gif" /></a>&nbsp;&nbsp;&nbsp;<a data-ng-click="delete(center)" href="javascript:;" title="Delete"><img alt="Delete" src="resources/images/delete-icon.gif" /></a></td>
+                </tr>
+            </table>
+        </div>    
+        <div>
+            
+            <button data-ng-click="showForm()" class="common-btn">Add New</button>
+            
+            <div ng-show="toggleForm" class="listing-add-form">
+                <form role="form" name="centerForm" novalidate>
+                    
+                    <input type="hidden" data-ng-model="id" />
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="centerName">Center Name</label>
+                            <input type="text" name="centerName" data-ng-model="center.centerName" ng-minlength="1" ng-maxlength="50"  ng-required="true" class="form-control" id="centerName" placeholder="Enter Center Name">
+<!--                            <div class="errormsg">Center Name required</div>-->
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="addressLine1">Address Line 1</label>
+                            <input type="text"  name="addressLine1"  data-ng-model="center.addressLine1" ng-minlength="1" ng-maxlength="50" ng-required="true" class="form-control" id="addressLine1" placeholder="Enter Center Address 1">            
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="addressLine2">Address Line 2</label>
+                            <input type="text"  name="addressLine2"   data-ng-model="center.addressLine2" ng-minlength="1" ng-maxlength="50" ng-required="true" class="form-control" id="addressLine2" placeholder="Enter Center Address 2">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="city">City</label>
+                            <input type="text" name="city" data-ng-model="center.city" ng-minlength="1" ng-maxlength="50" ng-required="true" class="form-control" id="city" placeholder="Enter City Name">            
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="pin">Zip code</label>
+                            <input type="text"  name="pin"  data-ng-model="center.pin" ng-minlength="1" ng-maxlength="8" ng-required="true" class="form-control" id="pin" placeholder="Enter Center ZIP CODE">            
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="description">Description</label>
+                            <input type="text"  name="description"   data-ng-model="center.description" ng-minlength="1" ng-maxlength="50" ng-required="false" class="form-control" id="description" placeholder="Enter Center Description">
+
+                        </div>
+                    </div>            
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="latitude">Latitude</label>
+                            <input type="number" name="latitude" data-ng-model="center.latitude" ng-minlength="1" ng-maxlength="20" ng-required="true" class="form-control" id="latitude" placeholder="Enter Center Latitude from Google Map">
+
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="longitude">Longitude</label>
+                            <input type="number" name="longitude" data-ng-model="center.longitude" ng-minlength="1" ng-maxlength="20" ng-required="true" class="form-control" id="longitude" placeholder="Enter Center Longitude from Google Map">
+
+                        </div>
+                    </div>
+                    <label>&nbsp;</label>
+                    <button data-ng-click="create()" class="btn btn-default common-btn">Submit</button>&nbsp;
+                    <input type="reset" data-ng-click="hideForm()" value="Cancel" class="btn btn-default common-btn" />
+
+                </form>
+            </div>
+        </div>
+    </div>    
 </div>
-    <div>
-        <form role="form" name="studentForm" novalidate>
-            <input type="hidden" data-ng-model="id" />
-            <div class="row">
-                <div class="form-group col-xs-5 col-lg-4">
-                    <label for="centerName">Center Name</label>
-                    <input type="text" name="centerName" data-ng-model="center.centerName" ng-minlength="1" ng-maxlength="50"  ng-required="true" class="form-control" id="centerName" placeholder="Enter Center Name">
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="form-group col-xs-5 col-lg-4">
-                <label for="addressLine1">Address Line 1</label>
-                <input type="text"  name="addressLine1"  data-ng-model="center.addressLine1" ng-minlength="1" ng-maxlength="50" ng-required="true" class="form-control" id="addressLine1" placeholder="Enter Center Address 1">            
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="form-group col-xs-5 col-lg-4">
-                <label for="addressLine2">Address Line 2</label>
-                <input type="text"  name="addressLine2"   data-ng-model="center.addressLine2" ng-minlength="1" ng-maxlength="50" ng-required="true" class="form-control" id="addressLine2" placeholder="Enter Center Address 2">
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="form-group col-xs-5 col-lg-4">
-                <label for="city">City</label>
-                <input type="text" name="city" data-ng-model="center.city" ng-minlength="1" ng-maxlength="50" ng-required="true" class="form-control" id="city" placeholder="Enter City Name">            
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="form-group col-xs-5 col-lg-4">
-                <label for="pin">Zip code</label>
-                <input type="text"  name="pin"  data-ng-model="center.pin" ng-minlength="1" ng-maxlength="8" ng-required="true" class="form-control" id="pin" placeholder="Enter Center ZIP CODE">            
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="form-group col-xs-5 col-lg-4">
-                <label for="description">Description</label>
-                <input type="text"  name="description"   data-ng-model="center.description" ng-minlength="1" ng-maxlength="50" ng-required="false" class="form-control" id="description" placeholder="Enter Center Description">
-            
-                </div>
-            </div>            
-
-            <div class="row">
-                <div class="form-group col-xs-5 col-lg-4">
-                <label for="latitude">Latitude</label>
-                <input type="number" name="latitude" data-ng-model="center.latitude" ng-minlength="1" ng-maxlength="20" ng-required="true" class="form-control" id="latitude" placeholder="Enter Center Latitude from Google Map">
-            
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="form-group col-xs-5 col-lg-4">
-                <label for="longitude">Longitude</label>
-                <input type="number" name="longitude" data-ng-model="center.longitude" ng-minlength="1" ng-maxlength="20" ng-required="true" class="form-control" id="longitude" placeholder="Enter Center Longitude from Google Map">
-            
-                </div>
-            </div>
-            
-             <button data-ng-click="create()" class="btn btn-default">Submit</button>
-             <input type="reset" value="Cancel" class="btn btn-default" />
-
-        </form>
-    </div>
