--- a/CNQAOS/web/resources/templates/training/training_template.html
+++ b/CNQAOS/web/resources/templates/training/training_template.html
@@ -1,61 +1,69 @@
-<div>
-    <table class="table">
-        <tr>  
-            <th>#</th>  
-            <td>Name</td>  
-            <th>Description</th>  
-            <th>Type</th>  
-            <th>    </th>  
-        </tr>
-        <tr data-ng-repeat="training in trainingList">
-            <td>{{$index+1 }}</td>
-            <td>{{training.name}}</td>
-            <td>{{training.description}}</td>
-            <td>{{training.type}}</td>
-            <td><p><a data-ng-click="edit(training)" href="javascript:;">Edit</a> | <a data-ng-click="delete(training)" href="javascript:;">Delete</a></p></td>
-        </tr>
-    </table>
+<div id="midd-container">
+    <div class="midd-content">
+        <div class="listingarea">
+            <table width="100%" border="0" cellpadding="0" cellspacing="1" class="table">
+                <tr>  
+                    <th align="center">#</th>  
+                    <td align="center">Name</td>  
+                    <th align="center">Description</th>  
+                    <th align="center">Type</th>  
+                    <th align="center">    </th>  
+                </tr>
+                <tr data-ng-repeat="training in trainingList">
+                    <td align="center">{{$index+1 }}</td>
+                    <td align="center">{{training.name}}</td>
+                    <td align="center">{{training.description}}</td>
+                    <td align="center">{{training.type}}</td>
+                    <td align="center"><a data-ng-click="edit(training)" href="javascript:;" title="Edit"><img alt="Edit" src="resources/images/edit-icon.gif" /></a>&nbsp;&nbsp;&nbsp;<a data-ng-click="delete(training)" href="javascript:;" title="Delete"><img alt="Delete" src="resources/images/delete-icon.gif" /></a></td>
+                </tr>
+            </table>
+        </div>    
+        <div>
+            <button data-ng-click="showForm()" class="common-btn">Add New</button>
+
+            <div ng-show="toggleForm" class="listing-add-form">
+                <form role="form" name="trainingForm" novalidate>
+                    <input type="hidden" data-ng-model="id" />
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="trainingName">Name</label>
+                            <input type="text" name="trainingName" data-ng-model="training.name" ng-minlength="1" ng-maxlength="50"  ng-required="true" class="form-control" id="trainingName" placeholder="Enter Traning Name">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                            <label for="description">Description</label>
+                            <input type="text" name="description" data-ng-model="training.description" ng-minlength="1" ng-maxlength="50"  ng-required="true" class="form-control" id="description" placeholder="Enter Traning Description">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-xs-5 col-lg-4">
+                        <label for="trainingType">Training Type</label>
+                        <select name="trainingType" id="trainingType" data-ng-model="training.typeId" class="form-control" ng-required="true" ng-options="tType.typeId as tType.type for tType in trainingType">
+                            <option value="">-- Select Training Type --</option>
+                        </select>
+                        </div>
+                    </div>
+
+                        <div class="row">
+                            <div class="form-group col-xs-5 col-lg-4">
+                            <label for="subject">Subject</label>
+                            <select name="subject" id="subject" data-ng-model="training.subjects" class="form-control" ng-options="subject.id as subject.subjectName for subject in subjectList" multiple>
+                                <option value="">-- Select Subjects --</option>
+                            </select>
+                            </div>
+                        </div>
+
+                    <label>&nbsp;</label>
+                    <button data-ng-click="create()" class="btn btn-default common-btn">Submit</button>&nbsp;
+                    <input type="reset" data-ng-click="hideForm()" value="Cancel" class="btn btn-default common-btn" />
+
+                </form>
+
+            </div>
+        </div>
+    </div>    
 </div>
-
-<div>
-    <form role="form" name="trainingForm" novalidate>
-        <input type="hidden" data-ng-model="id" />
-
-        <div class="row">
-            <div class="form-group col-xs-5 col-lg-4">
-                <label for="trainingName">Name</label>
-                <input type="text" name="trainingName" data-ng-model="training.name" ng-minlength="1" ng-maxlength="50"  ng-required="true" class="form-control" id="trainingName" placeholder="Enter Traning Name">
-            </div>
-        </div>
-  
-        <div class="row">
-            <div class="form-group col-xs-5 col-lg-4">
-                <label for="description">Description</label>
-                <input type="text" name="description" data-ng-model="training.description" ng-minlength="1" ng-maxlength="50"  ng-required="true" class="form-control" id="description" placeholder="Enter Traning Description">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-group col-xs-5 col-lg-4">
-            <label for="trainingType">Training Type</label>
-            <select name="trainingType" id="trainingType" data-ng-model="training.typeId" class="form-control" ng-required="true" ng-options="tType.typeId as tType.type for tType in trainingType">
-                <option value="">-- Select Training Type --</option>
-            </select>
-            </div>
-        </div>
-
-            <div class="row">
-                <div class="form-group col-xs-5 col-lg-4">
-                <label for="subject">Subject</label>
-                <select name="subject" id="subject" data-ng-model="training.subjects" class="form-control" ng-options="subject.id as subject.subjectName for subject in subjectList" multiple>
-                    <option value="">-- Select Subjects --</option>
-                </select>
-                </div>
-            </div>
-        
-         <button data-ng-click="create()" class="btn btn-default">Submit</button>
-         <input type="reset" value="Cancel" class="btn btn-default" />
-
-    </form>
-</div>
-    
